Test/git-issues/git-issue-2303.dfy.expect
git-issue-2303.dfy(5,6): Error: type for constant 'x' is 'int0', but its initialization value type is 'int'
git-issue-2303.dfy(4,8): Error: newtype's base type is not fully determined; add an explicit type for 'x'
2 resolution/type errors detected in git-issue-2303.dfy
